Add early duplicate observability guard